# BasicaoFullstack

backend-app/: pyproject.toml
backend-app/app/: __init__.py  flask_boilerplate_main.db
backend-app/app/controller/: categoria_controller.py  livro_controller.py
backend-app/app/model/: categoria_model.py  livro_model.py
backend-app/app/service/: categoria_service.py  livro_service.py
backend-app/app/util/: dto.py
backend-app/migrations/versions/: 3440b30f427e_ajusta_coluna_id_categoria.py  58bfa1e68b18_teste.py  9a347cd24501_teste.py  c90b4ae21cb9_ajusta_coluna_id_categoria.py
